[package]
name = "rraayy"
version = "0.1.0"
authors = ["Rafe Hall"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.dev]
# opt-level = 3

[dependencies]
glutin = "0.26"
# glam = "0.15"
cgmath = { version = "0.18", features = ["swizzle"] }
image = "0.23"
shaderc = "0.7"
rayon = "1.5"

arrayvec = "0.7"

[build-dependencies]
gl_generator = "0.14"